# brainfuck

./: .gitignore  Cargo.toml  README.md  build-wasm.sh  ln-into-webapp.sh
bf/: bfe-vm.md  bfe_vm.md  brainfuck-program.bf  brainfuck_program.bf  brainfuck_vm.bf  natural_cons.bf  test.bf
libbrainpipe/: Cargo.toml
libbrainpipe/src/: bf.rs  lib.rs
src/: bf.rs  lib.rs  main.rs
stdio/: Cargo.toml
stdio/src/: main.rs
wasm-crate/: Cargo.toml
wasm-crate/src/: lib.rs
