 [workspace]
 repository = "https://github.com/jhey29/brainpipe"
 license = "MIT"
 resolver = "2"
 members = ["wasm-crate","stdio","libbrainpipe"] # path dependencies like libbrainpipe are automatically members, maybe? 


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
getopts = "0.2"
